--- a/trunk/globalmentor-android/res/values/strings.xml
+++ b/trunk/globalmentor-android/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="about_label">About</string>
     <string name="error_label">Error</string>
 
 </resources>
